--- a/bluepenguin/templates/base.html
+++ b/bluepenguin/templates/base.html
@@ -84,7 +84,7 @@
             <div class="clear"></div>
             <footer>
                 <p>
-				The best way to reach out is with an
+				Shoot me an
                 <a href="mailto:jorge@jorgegarcia.io">email</a>.
                  {% if FEED_ALL_ATOM %}
                 &middot;
