--- a/output/theme/css/style.css
+++ b/output/theme/css/style.css
@@ -256,7 +256,7 @@ ul.social li a:hover {
 #content p > img {
   max-width: 100%;
   display: block;
-  margin: 3rem auto 3rem auto;
+  margin: .42rem auto .42rem auto;
 }
 
 #content p.content-highlight {
