--- a/minimalxy/templates/author.html
+++ b/minimalxy/templates/author.html
@@ -1,4 +1,4 @@
-    {% extends "index.html" %}
+    {% extends "category.html" %}
 
     {% block title %}Articles by {{ author }} &ndash; {{ SITENAME }}{% endblock %}
 
