--- a/minimalxy/templates/index.html
+++ b/minimalxy/templates/index.html
@@ -5,11 +5,11 @@
     {% include 'introduction.html' %}
     {% endif %}
     {% endblock %}
-
+{#
     {% block content %}
 
     <br><br><br>
-
+	
     <section id="listing">
       {% for article in articles_page.object_list %}
       <article class="w3-container w3-card-2 w3-white col-main">
@@ -27,7 +27,7 @@
             {% if article.tags %}
             <div class="w3-margin-right">
               {% for tag in article.tags %}
-              <span class="w3-tag w3-light-grey w3-text-green w3-hover-green">
+              <span class="w3-tag w3-pale-yellow w3-text-deep-purple w3-hover-red">
                 <a href="{{ SITEURL }}/{{ tag.url }}" title="All articles with {{ tag.name.title() }} tag">#{{ tag }}</a>
               </span>
               {% endfor %}
@@ -41,7 +41,7 @@
         </div>
 
         <footer>
-          <a class="w3-btn w3-green w3-right" href="{{ SITEURL }}/{{ article.url }}">Read &#10093;</a>
+          <a class="w3-btn w3-red w3-right" href="{{ SITEURL }}/{{ article.url }}">Read &#10093;</a>
         </footer>
       </article>
 
@@ -56,4 +56,4 @@
 
     </section>
 
-    {% endblock content %}
+    {% endblock content %} #}
