--- a/minimalxy/templates/article.html
+++ b/minimalxy/templates/article.html
@@ -16,7 +16,7 @@
           {% if article.tags %}
           <div>
             {% for tag in article.tags %}
-            <span class="w3-tag w3-light-grey w3-text-green w3-hover-green">
+            <span class="w3-tag w3-light-grey w3-text-purple w3-hover-red">
               <a href="{{ SITEURL }}/{{ tag.url }}" title="All articles with {{ tag.name.title() }} tag">#{{ tag }}</a>
             </span>
             {% endfor %}
