--- a/minimalxy/templates/base.html
+++ b/minimalxy/templates/base.html
@@ -118,12 +118,12 @@
             {% if DISPLAY_CATEGORIES_ON_MENU %}
             {% for cat, null in categories %}
             {% if cat != DEFAULT_CATEGORY %}
-            <li class="w3-bottombar w3-border-white w3-hover-border-green" {% if cat == category %}style="font-weight: bold;"{% endif %}><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }}</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-purple" {% if cat == category %}style="font-weight: bold;"{% endif %}><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }}</a></li>
             {% endif %}
             {% endfor %}
             {% endif %}
             {% for title, link in MENUITEMS %}
-            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="{{ link }}">{{ title }}</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-red"><a href="{{ link }}">{{ title }}</a></li>
             {% endfor %}
           </ul>
         </nav>
@@ -135,13 +135,13 @@
 
     {% block content %}
     {% endblock %}
-
+{#
     <footer id="footer">
       <div id="footer-copyright" class="w3-center w3-small w3-text-grey w3-padding-48">
         <span>&copy; {{ MINIMALXY_START_YEAR }}{% if MINIMALXY_START_YEAR and MINIMALXY_CURRENT_YEAR %}-{% endif %}{{ MINIMALXY_CURRENT_YEAR }} {{ AUTHOR }} {% if FEED_ALL_ATOM %} | <a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}">Atom feed <i class="fa fa-rss" aria-hidden="true"></i></a>{% endif %}</span>
       </div>
     </footer>
-
+#}
     {% if GOOGLE_ANALYTICS %}
       {% include "ga.html" %}
     {% endif %}
