--- a/minimalxy/templates/tag.html
+++ b/minimalxy/templates/tag.html
@@ -1,4 +1,4 @@
-    {% extends "index.html" %}
+    {% extends "category.html" %}
 
     {% block title %}{{ tag }} &ndash; {{ SITENAME }}{% endblock %}
 
