--- a/minimalxy/templates/base.html
+++ b/minimalxy/templates/base.html
@@ -135,13 +135,17 @@
 
     {% block content %}
     {% endblock %}
-{#
     <footer id="footer">
-      <div id="footer-copyright" class="w3-center w3-small w3-text-grey w3-padding-48">
-        <span>&copy; {{ MINIMALXY_START_YEAR }}{% if MINIMALXY_START_YEAR and MINIMALXY_CURRENT_YEAR %}-{% endif %}{{ MINIMALXY_CURRENT_YEAR }} {{ AUTHOR }} {% if FEED_ALL_ATOM %} | <a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}">Atom feed <i class="fa fa-rss" aria-hidden="true"></i></a>{% endif %}</span>
+      <div id="footer-copyright" class="w3-center w3-small w3-text-black w3-padding-8">
+          <ul class="social" style="margin: 0; margin-top: 10px; margin-bottom: 48px; padding: 0;">
+              {% for name, link in SOCIAL %}
+              <li><a class="sc-{{ name }}" href="{{ link }}" target="_blank"><i class="fa fa-{{ name }}"></i></a></li>
+              {% endfor %}
+            </ul>
+        {#<span>&copy; {{ MINIMALXY_START_YEAR }}{% if MINIMALXY_START_YEAR and MINIMALXY_CURRENT_YEAR %}-{% endif %}{{ MINIMALXY_CURRENT_YEAR }} {{ AUTHOR }} {% if FEED_ALL_ATOM %} | <a href="{{ FEED_DOMAIN }}/{{ FEED_ALL_ATOM }}">Atom feed <i class="fa fa-rss" aria-hidden="true"></i></a>{% endif %}</span>#}
       </div>
     </footer>
-#}
+
     {% if GOOGLE_ANALYTICS %}
       {% include "ga.html" %}
     {% endif %}
