--- a/minimalxy/templates/category.html
+++ b/minimalxy/templates/category.html
@@ -20,29 +20,30 @@
       {% for article in articles_page.object_list %}
       <article class="w3-container w3-card-2 w3-white col-main">
         <header>
+            <h2><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2>
+            <div class="post-info">
+              <div class="w3-opacity w3-margin-right w3-margin-bottom" style="flex-grow: 1;">
+                <span><time datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time> in <a href="{{ SITEURL }}/{{ article.category.url }}" title="All articles in category {{ article.category }}">{{ article.category }}</a></span>
+              </div>
+              {% if article.tags %}
+              <div class="w3-margin-right">
+                {% for tag in article.tags %}
+                <span class="w3-tag w3-pale-yellow w3-text-deep-purple w3-hover-red">
+                  <a href="{{ SITEURL }}/{{ tag.url }}" title="All articles with {{ tag.name.title() }} tag">#{{ tag }}</a>
+                </span>
+                {% endfor %}
+              </div>
+              {% endif %}
+            </div>
           {% if article.headerimage %}
           <div class="headerimage-card">
             <a href="{{ SITEURL }}/{{ article.url }}"><img src="{{ article.headerimage }}" style="width: 100%;"></img></a>
           </div>
           {% endif %}
-          <h2><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2>
-          <div class="post-info">
-            <div class="w3-opacity w3-margin-right w3-margin-bottom" style="flex-grow: 1;">
-              <span><time datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time> in <a href="{{ SITEURL }}/{{ article.category.url }}" title="All articles in category {{ article.category }}">{{ article.category }}</a></span>
-            </div>
-            {% if article.tags %}
-            <div class="w3-margin-right">
-              {% for tag in article.tags %}
-              <span class="w3-tag w3-pale-yellow w3-text-deep-purple w3-hover-red">
-                <a href="{{ SITEURL }}/{{ tag.url }}" title="All articles with {{ tag.name.title() }} tag">#{{ tag }}</a>
-              </span>
-              {% endfor %}
-            </div>
-            {% endif %}
-          </div>
+          
         </header>
 
-        <div class="entry-content">
+        <div class="entry-content" style="padding: 2rem">
           {{ article.summary|striptags }}
         </div>
 
