--- a/minimalxy/templates/introduction.html
+++ b/minimalxy/templates/introduction.html
@@ -2,14 +2,17 @@
       <aside id="intro" class="w3-container w3-center w3-padding-32">
         <div>
           <span id="intro-description">{{ AUTHOR_INTRO }}</span>
-          <ul class="social" style="margin: 0; margin-top: 10px; padding: 0;">
+          <br><br>
+          <span id="intro-description">{{ AUTHOR_INTRO2 }}</span>
+          {# <ul class="social" style="margin: 0; margin-top: 10px; padding: 0;">
             {% for name, link in SOCIAL %}
             <li><a class="sc-{{ name }}" href="{{ link }}" target="_blank"><i class="fa fa-{{ name }}"></i></a></li>
             {% endfor %}
-          </ul>
+          </ul> #}
           <div style="max-width: 860px">
           <span id="intro-description">{{ AUTHOR_DESCRIPTION }}</span>
-          <span id="intro-description">{{ AUTHOR_SAYS }}</span>
+          <br><br>
+          <span id="intro-description">{{ AUTHOR_CONTACT }}</span>
         </div>
         </div>
         <div style="line-height: 180px;">
