--- a/output/theme/css/style.css
+++ b/output/theme/css/style.css
@@ -89,8 +89,11 @@ abbr[title] {
 }
 
 .headerimage-article {
-  margin: auto;
-  max-width: 900px;
+  margin: auto auto 2rem auto;
+  display: block;
+  max-width: 90%;
+  padding-bottom: 1rem;
+  border-bottom: 1px solid dimgrey;
 }
 
 .headerimage-card {
@@ -98,7 +101,9 @@ abbr[title] {
 }
 
 .headerimage-card > img {
-  max-width: 100%;
+  max-width: 90%;
+  display: block;
+  margin: auto;
 }
 
 ul.social {
@@ -197,7 +202,7 @@ ul.social li a:hover {
 }
 
 #footer-copyright {
-  background-color: #0F0F0F;
+  background-color: #fcfcfc;
 }
 
 #listing article {
@@ -259,7 +264,7 @@ ul.social li a:hover {
 }
 
 #content p > img {
-  max-width: 600px;
+  max-width: 90%;
   display: block;
   margin: .42rem auto .42rem auto;
 }
