--- a/minimalxy/templates/category.html
+++ b/minimalxy/templates/category.html
@@ -37,7 +37,7 @@
             </div>
           {% if article.headerimage %}
           <div class="headerimage-card">
-            <a href="{{ SITEURL }}/{{ article.url }}"><img src="{{ article.headerimage }}" style="width: 100%;"></img></a>
+            <a href="{{ SITEURL }}/{{ article.url }}"><img src="{{ article.headerimage }}" style="max-width: 400px; max-height: 400px; display: block; margin: auto; "></img></a>
           </div>
           {% endif %}
           
