--- a/minimalxy/templates/category.html
+++ b/minimalxy/templates/category.html
@@ -6,8 +6,8 @@
 
     <br><br><br>
 
-    <div class="w3-container col-main w3-center">
-      <h2>{{ category }}</h2>
+    <div class="w3-container col-main">
+      <h1>{{ category }}</h1>
     </div>
 
     {% endblock content_title %}
@@ -23,17 +23,8 @@
             <h2><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2>
             <div class="post-info">
               <div class="w3-opacity w3-margin-right w3-margin-bottom" style="flex-grow: 1;">
-                <span><time datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time> in <a href="{{ SITEURL }}/{{ article.category.url }}" title="All articles in category {{ article.category }}">{{ article.category }}</a></span>
+                <span><time datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time>{# in <a href="{{ SITEURL }}/{{ article.category.url }}" title="All articles in category {{ article.category }}">{{ article.category }}</a>#}</span>
               </div>
-              {% if article.tags %}
-              <div class="w3-margin-right">
-                {% for tag in article.tags %}
-                <span class="w3-tag w3-pale-yellow w3-text-deep-purple w3-hover-red">
-                  <a href="{{ SITEURL }}/{{ tag.url }}" title="All articles with {{ tag.name.title() }} tag">#{{ tag }}</a>
-                </span>
-                {% endfor %}
-              </div>
-              {% endif %}
             </div>
           {% if article.headerimage %}
           <div class="headerimage-card">
@@ -41,14 +32,24 @@
           </div>
           {% endif %}
           
+          
         </header>
 
         <div class="entry-content" style="padding: 2rem">
           {{ article.summary|striptags }}
         </div>
+        {% if article.tags %}
+              <div class="tags">
+                {% for tag in article.tags %}
+                <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
+                  <a href="{{ SITEURL }}/{{ tag.url }}" title="All articles with {{ tag.name.title() }} tag">#{{ tag }}</a>
+                </span>
+                {% endfor %}
+              </div>
+              {% endif %}
 
         <footer>
-          <a class="w3-btn w3-red w3-right" href="{{ SITEURL }}/{{ article.url }}">Read &#10093;</a>
+          <a class="w3-btn w3-deep-purple w3-right" href="{{ SITEURL }}/{{ article.url }}">Read More</a>
         </footer>
       </article>
 
