--- a/minimalxy/templates/base.html
+++ b/minimalxy/templates/base.html
@@ -118,12 +118,12 @@
             {% if DISPLAY_CATEGORIES_ON_MENU %}
             {% for cat, null in categories %}
             {% if cat != DEFAULT_CATEGORY %}
-            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple" {% if cat == category %}style="font-weight: bold;"{% endif %}><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }}</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-green" {% if cat == category %}style="font-weight: bold;"{% endif %}><a href="{{ SITEURL }}/{{ cat.url }}">{{ cat }}</a></li>
             {% endif %}
             {% endfor %}
             {% endif %}
             {% for title, link in MENUITEMS %}
-            <li class="w3-bottombar w3-border-white w3-hover-border-green"><a href="{{ link }}">{{ title }}</a></li>
+            <li class="w3-bottombar w3-border-white w3-hover-border-deep-purple"><a href="{{ link }}">{{ title }}</a></li>
             {% endfor %}
           </ul>
         </nav>
