--- a/minimalxy/templates/introduction.html
+++ b/minimalxy/templates/introduction.html
@@ -10,9 +10,11 @@
             {% endfor %}
           </ul> #}
           <div style="max-width: 860px">
-          <span id="intro-description">{{ AUTHOR_DESCRIPTION }}</span>
+          <span id="intro-description">{{ AUTHOR_DESCRIPTION }} <a style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
+          <span id="intro-description">{{ AUTHOR_DESCRIPTION2 }}</span>
           <br><br>
-          <span id="intro-description">{{ AUTHOR_CONTACT }}</span>
+          <span id="intro-description">{{ AUTHOR_CONTACT }} <a style="color: #673ab7" href="http://makersinchicago.org">email</a></span>
+          <span id="intro-description">{{ AUTHOR_CONTACT2 }}</span>
         </div>
         </div>
         <div style="line-height: 180px;">
