--- a/minimalxy/templates/category.html
+++ b/minimalxy/templates/category.html
@@ -29,7 +29,7 @@
           
           <div class="headerimage-card">
           {% if article.headerimage %}
-            <a href="{{ SITEURL }}/{{ article.url }}"><img src="{{ article.headerimage }}" class ="pelican"></img></a>
+            <a href="{{ SITEURL }}/{{ article.url }}"><img src="{{ article.headerimage }}" class ="listing-image"></img></a>
               {% endif %}
               <div class="entry-content" style="padding: 2rem;">
                 {{ article.summary|striptags }}
