--- a/minimalxy/static/css/style.css
+++ b/minimalxy/static/css/style.css
@@ -10,7 +10,6 @@ body {
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Bitter', serif;
-  line-height: 1.1;
 }
 
 h1 {
@@ -25,11 +24,19 @@ h2 {
 
 h3 {
   font-weight: bold;
-  font-size: 16pt;
+  font-size: 18pt;
 }
 
 h4 {
   font-size: 16pt;
+}
+
+h5 {
+  font-size: 14pt;
+}
+
+h6 {
+  font-size: 12pt;
 }
 
 a {
@@ -246,6 +253,14 @@ ul.social li a:hover {
 
 #content h2, #content h3, #content h4 {
   margin-bottom: 1.5rem;
+  max-width: 600px;
+  margin: auto;
+}
+
+#content h6 {
+  font-size: 1.42rem;
+  max-width: 600px;
+  margin: auto;
 }
 
 #content a {
