--- a/minimalxy/templates/base.html
+++ b/minimalxy/templates/base.html
@@ -83,7 +83,7 @@
     <link rel="alternate" type="application/rss+xml" href="http://{{ DISQUS_SITENAME }}.disqus.com/latest.rss" title="{{ SITENAME }} Comments RSS Feed">
     {% endif %}
 
-    <!-- CSS -->
+    <!-- CSS --> 
     <link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:regular,bold">
     <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/w3.css">
     <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/style.css">
@@ -95,9 +95,7 @@
     {% endif %}
 
     <!-- Icon -->
-    {% if MINIMALXY_FAVICON %}
-    <link rel="shortcut icon" type="image/x-icon" href="{{ SITEURL }}/{{ MINIMALXY_FAVICON }}">
-    {% endif %}
+    <link rel="shortcut icon" type="image/x-icon" href="{{ SITEURL }}/theme/images/favicon.png">
 
     <!-- JavaScript -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
