--- a/minimalxy/templates/category.html
+++ b/minimalxy/templates/category.html
@@ -15,36 +15,35 @@
     {% block content %}
 
     <br>
+
+    <div class="w3-center w3-container col-main">
+        <section id="content">
+            <details>
+                <summary>View Tags</summary>
+                <div style="background:#f3f3f3; padding:1rem; margin-top: 1rem">
+                  <ul>
+                  {%- for tag, articles in tags|sort %}
+                    <li style="display: inline; font-size:1.{{ articles|count }}rem;"> • <a href="{{ SITEURL }}/{{ tag.url }}">{{ tag }} ({{ articles|count }})</a></li>
+                  {% endfor %}
+                  </ul>
+                </div>
+              </details>
+        </section>
+      </div>
+
+        <br>
 	
     <section id="listing">
       {% for article in articles_page.object_list %}
       <article class="w3-container w3-card-2 w3-white col-main">
         <header>
-            <h2><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h2>
-            <div class="post-info">
+            <h4><a class="w3-hover-text-deep-purple" href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h4>
+            {# <div class="post-info">
               <div class="w3-opacity w3-margin-right w3-margin-bottom" style="flex-grow: 1;">
-                <span><time datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time>{# in <a href="{{ SITEURL }}/{{ article.category.url }}" title="All articles in category {{ article.category }}">{{ article.category }}</a>#}</span>
-              </div>
-            </div>
-          
-          <div class="headerimage-card">
-          {% if article.headerimage %}
-            <a href="{{ SITEURL }}/{{ article.url }}"><img src="{{ article.headerimage }}" class ="listing-image"></img></a>
-              {% endif %}
-              <div class="entry-content" style="padding: 2rem;">
-                {{ article.summary|striptags }}
-              </div>
-          </div>
-          <footer>
-          <a class="w3-btn w3-deep-purple w3-right" href="{{ SITEURL }}/{{ article.url }}">Read More</a>
-        </footer>
-          
-          
-          
-        </header>
-
-        
-        {% if article.tags %}
+                <span><time datetime="{{ article.date.isoformat() }}">{{ article.locale_date }}</time>{# in <a href="{{ SITEURL }}/{{ article.category.url }}" title="All articles in category {{ article.category }}">{{ article.category }}</a>≈</span>
+              </div> 
+            </div>#}
+          {% if article.tags %}
               <div class="tags">
                 {% for tag in article.tags %}
                 <span class="w3-tag w3-light-grey w3-text-deep-purple w3-hover-deep-purple">
@@ -53,8 +52,24 @@
                 {% endfor %}
               </div>
               {% endif %}
+          <div class="headerimage-card">
+          {% if article.headerimage %}
+            <a href="{{ SITEURL }}/{{ article.url }}"><img src="{{ article.headerimage }}" class ="listing-image"></img></a>
+              {% endif %}
+              <div class="entry-content" style="padding: 1rem;">
+                {{ article.summary|striptags }}
+              </div>
+          </div>
+        {#
+          <footer>
+          <a class="w3-btn w3-deep-purple w3-right" href="{{ SITEURL }}/{{ article.url }}">Read More</a>
+        </footer>
+        #}
+          
+          
+          
+        </header>
 
-        
       </article>
 
       <br><br><br>
