--- a/output/theme/css/style.css
+++ b/output/theme/css/style.css
@@ -1,11 +1,9 @@
 /* Global */
 
 body {
-  margin: 0px;
-  padding: 0px;
   background-color: #fcfcfc;
   font-family: 'Open Sans', sans-serif;
-  font-size: 12pt;
+  font-size: 1.4rem;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -14,29 +12,25 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-weight: bold;
-  font-size: 23pt;
 }
 
 h2 {
   font-weight: bolder;
-  font-size: 20px;
 }
 
 h3 {
   font-weight: bold;
-  font-size: 18pt;
 }
 
 h4 {
-  font-size: 16pt;
+  font-size: 2.2rem;
+  font-weight: 700;
 }
 
 h5 {
-  font-size: 14pt;
 }
 
 h6 {
-  font-size: 12pt;
 }
 
 a {
@@ -68,12 +62,17 @@ abbr[title] {
 }
 
 details {
-  font-family: 'Open Sans', sans-serif;
-  font-size: .90rem;
+  font-family: 'Bitter', serif;
+  font-size: 1.4rem;
   color: #673ab7;
   max-width: 600px;
   margin-left: auto;
   margin-right: auto;
+}
+
+summary:focus {
+  outline: none;
+  border: none;
 }
 
 summary::-webkit-details-marker {
@@ -94,15 +93,18 @@ summary::-webkit-details-marker {
 
 .post-info {
   display: flex;
+  margin-left: 1rem;
   flex-wrap: wrap;
-  font-size: 15px;
+  font-size: 1.2rem;
+  color: #2f2f2f;
+  text-transform: uppercase;
 }
 
 .caption {
   font-family: 'Open Sans', sans-serif;
   display: block;
   text-align: center;
-  font-size: .90rem;
+  font-size: 1.2rem;
   color: dimgrey;
   margin-top: .21rem;
   margin-bottom: 1rem;
@@ -113,7 +115,7 @@ summary::-webkit-details-marker {
   display: block;
   max-width: 90%;
   padding-bottom: 1rem;
-  border-bottom: 1px solid dimgrey;
+  border-bottom: .1rem solid dimgrey;
 }
 
 .headerimage-card {
@@ -134,6 +136,7 @@ summary::-webkit-details-marker {
 }
 
 .tags {
+  font-size: 1.2rem;
   margin-top:5px;
   margin-bottom: 10px;
 }
@@ -239,21 +242,25 @@ ul.social li a:hover {
 }
 
 #listing article {
-  padding: 30px;
+  padding: 1rem 3rem;
   font-family: Bitter;
-    color: rgba(33,33,33,1);
-    font-size: 15px;
-    line-height: 1.6;
-    padding-top: 6px;
+  color: rgba(33,33,33,1);
+  font-size: 1.4rem;
+  line-height: 1.6;
 }
 
 #content {
   line-height: 1.6;
 }
 
-#content h2, #content h3, #content h4 {
+#content h2, #content h4 , #content h5{
   margin-bottom: 1.5rem;
   max-width: 600px;
+  margin: auto;
+}
+
+#content h5 {
+  max-width: 700px;
   margin: auto;
 }
 
@@ -264,6 +271,7 @@ ul.social li a:hover {
 }
 
 #content a {
+  font-family: 'Bitter', serif;
   color: #673ab7;
 }
 
@@ -397,6 +405,7 @@ ul.social li a:hover {
     max-width: 800px;
     padding-bottom: 1rem;
     border-bottom: 1px solid dimgrey;
+  }
 
   .listing-image {
     width: auto;
