--- a/minimalxy/templates/category.html
+++ b/minimalxy/templates/category.html
@@ -19,7 +19,7 @@
     <div class="w3-center w3-container col-main">
         <section id="content">
             <details>
-                <summary>View Tags</summary>
+                <summary><h5>View Tags</h5></summary>
                 <div style="background:#f3f3f3; padding:1rem; margin-top: 1rem">
                   <ul>
                   {%- for tag, articles in tags|sort %}
