--- a/minimalxy/templates/introduction.html
+++ b/minimalxy/templates/introduction.html
@@ -13,7 +13,7 @@
           <span id="intro-description">{{ AUTHOR_DESCRIPTION }} <a style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
           <span id="intro-description">{{ AUTHOR_DESCRIPTION2 }}</span>
           <br><br>
-          <span id="intro-description">{{ AUTHOR_CONTACT }} <a style="color: #673ab7" href="http://makersinchicago.org">email</a></span>
+          <span id="intro-description">{{ AUTHOR_CONTACT }} <a class="w3-hover-black" style="color: #673ab7" href="mailto:jorge@jorgegarcia.io">email</a></span>
           <span id="intro-description">{{ AUTHOR_CONTACT2 }}</span>
         </div>
         </div>
