--- a/minimalxy/static/css/style.css
+++ b/minimalxy/static/css/style.css
@@ -10,7 +10,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: 'Bitter', serif;
 }
 
-h1 {
+h1, h3 {
   font-weight: bold;
 }
 
@@ -18,19 +18,9 @@ h2 {
   font-weight: bolder;
 }
 
-h3 {
-  font-weight: bold;
-}
-
 h4 {
   font-size: 2.2rem;
   font-weight: 700;
-}
-
-h5 {
-}
-
-h6 {
 }
 
 a {
@@ -380,8 +370,6 @@ ul.social li a:hover {
 #share a span {
   display: none;
 }
-
-
 
 /* Screen > 530px */
 
