--- a/minimalxy/templates/introduction.html
+++ b/minimalxy/templates/introduction.html
@@ -10,10 +10,10 @@
             {% endfor %}
           </ul> #}
           <div style="max-width: 860px">
-          <span id="intro-description">{{ AUTHOR_DESCRIPTION }} <a style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
+          <span id="intro-description">{{ AUTHOR_DESCRIPTION }} <a <a class="w3-hover-text-grey" style="color: #673ab7" href="http://makersinchicago.org">Chicago</a>.</span>
           <span id="intro-description">{{ AUTHOR_DESCRIPTION2 }}</span>
           <br><br>
-          <span id="intro-description">{{ AUTHOR_CONTACT }} <a class="w3-hover-black" style="color: #673ab7" href="mailto:jorge@jorgegarcia.io">email</a></span>
+          <span id="intro-description">{{ AUTHOR_CONTACT }} <a class="w3-hover-text-grey" style="color: #673ab7" href="mailto:jorge@jorgegarcia.io">email</a></span>
           <span id="intro-description">{{ AUTHOR_CONTACT2 }}</span>
         </div>
         </div>
