--- a/minimalxy/static/css/style.css
+++ b/minimalxy/static/css/style.css
@@ -155,7 +155,8 @@ ul.social li a:hover {
   margin-left: auto;
   margin-right: auto;
   padding: 16px;
-  max-width: 1200px;
+  max-width: 1100px;
+  overflow-x:hidden;
 }
 
 #header-logo {
