--- a/minimalxy/static/css/style.css
+++ b/minimalxy/static/css/style.css
@@ -4,7 +4,7 @@ body {
   background-color: #fcfcfc;
   font-family: 'Open Sans', sans-serif;
   font-size: 1.4rem;
-  overflow-x:hidden;
+  overflow-y:hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
