--- a/minimalxy/templates/introduction.html
+++ b/minimalxy/templates/introduction.html
@@ -19,7 +19,7 @@
         </div>
         </div>
         <div style="line-height: 180px;">
-          <a href="{{ AUTHOR_WEB }}" target="theme/images/selfie.jpg"><img class="avatar" alt="Jorge Garcia" src="{{ AUTHOR_AVATAR }}" onerror="this.src='theme/images/selfie.jpg'"></a>
+          <a href="/theme/images/selfie.jpg"><img class="avatar" alt="Jorge Garcia" src="{{ AUTHOR_AVATAR }}" onerror="this.src='theme/images/selfie.jpg'"></a>
         </div>
         
       </aside>
