--- a/minimalxy/static/css/style.css
+++ b/minimalxy/static/css/style.css
@@ -247,6 +247,12 @@ ul.social li a:hover {
   margin-bottom: 1.5rem;
   max-width: 600px;
   margin: auto;
+  font-weight: 700;
+}
+
+#content h2 {
+  max-width: 800px;
+  margin: auto;
 }
 
 #content h3 {
@@ -255,17 +261,18 @@ ul.social li a:hover {
 }
 
 #content h4 {
-  max-width: 725px;
+  max-width: 700px;
   margin: auto;
 }
 
 #content h5 {
-  max-width: 700px;
+  max-width: 650px;
   margin: auto;
 }
 
 #content h6 {
   font-size: 1.42rem;
+  font-weight: 700;
   max-width: 600px;
   margin: auto;
 }
@@ -325,6 +332,9 @@ ul.social li a:hover {
     font-size: 15px;
     line-height: 1.6;
     padding-top: 6px;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 #content p > img {
