--- a/minimalxy/templates/base.html
+++ b/minimalxy/templates/base.html
@@ -105,7 +105,7 @@
   <body>
     <div class="w3-row w3-card w3-white">
       <header id="header">
-        <a href="https://jorgegarcia.io\" id="header-logo" title="Home">{{ AUTHOR[0] + AUTHOR[AUTHOR.index(" ")+1] }}</a>
+        <a href="/" id="header-logo" title="Home">{{ AUTHOR[0] + AUTHOR[AUTHOR.index(" ")+1] }}</a>
         <nav id="header-menu">
           <ul>
             {% if DISPLAY_PAGES_ON_MENU %}
