--- a/minimalxy/static/css/style.css
+++ b/minimalxy/static/css/style.css
@@ -69,6 +69,10 @@ summary::-webkit-details-marker {
   color: transparent;
 }
 
+img {
+  max-width: 400 px;
+}
+
 /* Classes */
 
 .col-main {
@@ -150,11 +154,10 @@ ul.social li a:hover {
 /* Ids */
 
 #header {
-  display: flex;
+  display: block;
   justify-content: space-between;
   margin-left: auto;
   margin-right: auto;
-  padding: 16px;
   max-width: 1200px;
 }
 
