--- a/minimalxy/templates/base.html
+++ b/minimalxy/templates/base.html
@@ -105,8 +105,8 @@
   <body>
     <div class="w3-row w3-card w3-white">
       <header id="header">
-        <a href="/" id="header-logo" title="Home">{{ AUTHOR[0] + AUTHOR[AUTHOR.index(" ")+1] }}</a>
         <nav id="header-menu">
+          <p class="w3-bottombar w3-border-green" style="font-weight: bold;">jorgegarcia.io</p>
           <ul>
             {% if DISPLAY_PAGES_ON_MENU %}
             {% for p in pages %}
