--- a/delphic/templates/base.html
+++ b/delphic/templates/base.html
@@ -9,7 +9,7 @@
 <!-- Meta -->
 <meta name="description" content="{{ SITENAME }} &ndash; {{ SITESUBTITLE }}">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="theme-color" content="#2F847C" />
+<meta name="theme-color" content="#9771B0" />
 
 <!-- CSS --> 
 <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/normalize.css" />
