front page edits

--- a/pelican/delphic/templates/index.html
+++ b/pelican/delphic/templates/index.html
@@ -1,16 +1,20 @@
 {% extends "base.html" %}
+
 {% block content %}
 
 <p>
-Hello, I'm Jorge.  
+<b>
+Jorge Garcia, Instructional Technologist/Maker from Chicago
+</b>
 <br>
 <br>
-That's Jorge like forge or gorge.
-I'm a maker culture professional and instructional designer from <a href="https://makersinchicago.org">Chicago</a>.
-I make, break, and fix things to learn– teaching and consulting on tech along the way.  
+Most of my efforts recently are centered around 
+<a href="https://makersinchicago.org">Makers in Chicago</a>
+
+I make, break, and fix things to learn– teaching and consulting on consumer technology along the way.  
 <br><br>
 To best reach me, shoot me an <a href="mailto:jorge@jorgegarcia.io">email</a>.
 </p>
 <hr>
-
+I'm a maker culture professional and instructional designer from <a href="https://makersinchicago.org">Chicago</a>.
 {% endblock content %}
