--- a/pelican/delphic/templates/index.html
+++ b/pelican/delphic/templates/index.html
@@ -4,7 +4,7 @@
 
 <p>
 <b>
-Jorge Garcia, Instructional Technologist and Tinkerer from Chicago
+Jorge Garcia, Instructional Technologist & Tinkerer from Chicago
 </b>
 <br>
 <br>
