--- a/pelican/delphic/templates/base.html
+++ b/pelican/delphic/templates/base.html
@@ -12,40 +12,56 @@
 <meta name="theme-color" content="#9771B0" />
 
 <!-- CSS --> 
+
+<link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/bootstrap.css" />
 <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/normalize.css" />
 <link rel="stylesheet" type="text/css" href="{{ SITEURL }}/theme/css/style.css" />
 <link href="https://fonts.googleapis.com/css?family=Big+Shoulders+Text|Lora|Roboto:400,700&display=swap" rel="stylesheet">
+
+
 </head>
 <!-- Ic0n -->
 <link rel="shortcut icon" type="image/x-icon" href="{{ SITEURL }}/theme/images/favicon.png">
 
   <body>
-    <div class="main">
-      <header class="banner">
-          <a href="/" title="Home"><img class="logo" src="/theme/images/star.png"></a>
+    <div class="container">
+      <div class="row" id="banner">
+        <div class="col-sm-12">
+          <div class="banner">
+        <a href="/" title="Home"><img class="logo" src="/theme/images/star.png"></a>
           
         <h1 class="sitename"><a href="/" title="Home">{{ SITENAME }}</a></h1>
-        <div id="menu">
-          <ul class="nav">
-              {% if LINKS %}
+        <div class="bannerpurp"></div>
+      </div>  
+      </div>
+      </div>
+      <div class="row">
+      <div class="col-sm-2">
+        <ul class="nav">
+        {% if LINKS %}
               {% for name, link in LINKS %}
               <li><a id='cats' href="{{ link }}">{{ name }}</a></li>
                       {% endfor %}
       {% endif %}
-            {% if DISPLAY_PAGES_ON_MENU %}
-              {% for p in pages %}
-                <li><a id='cats' href="{{ SITEURL }}/{{ p.url }}">{{ p.title }}</a></h4></li>
-              {% endfor %}
-            {% endif %}   
-          </ul>
-        </div>
-      </header>
-    <div class="content">
-      <div class="info">
+    </ul>
+      </div>
+      <div class="col-sm-10">
         {% block content %}
         {% endblock %}
-        </div>
-      
-    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-12">
+    <hr>
+        <div class="intro-description">{{ AUTHOR_INTRO }}</div>
+        <ul class="social">
+          {% for name, link in SOCIAL %}
+          <li><a class="sc-{{ name }}" href="{{ link }}" target="_blank"><i class="fa fa-{{ name }}"> {{ name}}</i></a></li>
+          {% endfor %}
+        </ul>
+  </div>
+</div>
+
+  </div>
   </body>
 </html>
