--- a/pelican/delphic/templates/base.html
+++ b/pelican/delphic/templates/base.html
@@ -28,7 +28,7 @@
       <div class="row" id="banner">
         <div class="col-sm-12">
           <div class="banner">
-        <a href="/" title="Home"><img class="logo" src="/theme/images/star.png"></a>
+        <a href="/" title="Home"><img class="logo" src="/theme/images/logo.svg"></a>
           
         <h1 class="sitename"><a href="/" title="Home">{{ SITENAME }}</a></h1>
         <div class="bannerpurp"></div>
