--- a/pelican/delphic/templates/base.html
+++ b/pelican/delphic/templates/base.html
@@ -36,7 +36,7 @@
       </div>
       </div>
       <div class="row">
-      <div class="col-sm-2">
+      <div class="col-md-2">
         <ul class="nav">
         {% if LINKS %}
               {% for name, link in LINKS %}
@@ -45,7 +45,7 @@
       {% endif %}
     </ul>
       </div>
-      <div class="col-sm-10">
+      <div class="col-md-10">
         {% block content %}
         {% endblock %}
   </div>
