--- a/pelican/delphic/static/css/style.css
+++ b/pelican/delphic/static/css/style.css
@@ -21,6 +21,7 @@ body {
 	margin-top: 1rem;
 }
 p {
+	
 }
 
 h1, h2 {
@@ -72,11 +73,6 @@ li.current{
 	
 }
 
-.main {
-	max-width: 900px;
-	margin: 0px auto;
-	padding: 3rem 1rem;
-}
 .content {
 	padding: .42em .42em;
 	border-radius: 2rem;
@@ -172,7 +168,6 @@ ul.nav {
 }
 .social {
 	text-align: center;
-	margin-top: 0px;;
 }
 ul.nav li {
 	display:inline-block;
@@ -187,26 +182,42 @@ ul.nav li {
 }
 
 
-ul.social li {
+.social li {
 	display:inline-block;
 	list-style: none;
-	padding-left:8px;
-	padding-right:8px;
+	padding-left:1em;
+	padding-right:1em;
 	text-align:center;
-	font-family: 'Courier New';
+	font-family: 'Roboto';
 	font-weight: 400;
 	text-transform: lowercase;
-	font-size: 1em;
+	font-size: 1.1em;
 }
 
 .intro-description {
 	font-family: 'Open Sans', sans-serif;
 	text-align: center;
-	font-style: italic;
+	font-size: .9em;
 }
 .row {
 	max-width: 900px;
 	margin: auto;
+}
+
+#top {
+	background-color: #8EC5FC;
+	background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
+	border-radius: 2rem;
+}
+
+.text-center {
+	text-align: center;
+}
+
+.sig {
+	font-family: 'Open Sans', sans-serif;
+	text-align: center;
+	font-size: .75em;
 }
 
 @media (min-width: 992px) {
