--- a/pelican/delphic/templates/base.html
+++ b/pelican/delphic/templates/base.html
@@ -52,12 +52,12 @@
 <div class="row">
   <div class="col-sm-12">
     <hr>
-    <ul class="social">
+    <ul class="social text-center">
       {% for name, link in SITES %}
       <li><a class="sc-{{ name }}" href="{{ link }}" target="_blank">{{ name}}</a></li>
       {% endfor %}
     </ul>
-        <ul class="social">
+        <ul class="social text-center">
           {% for name, link in SOCIAL %}
           <li><a class="sc-{{ name }}" href="{{ link }}" target="_blank">{{ name}}</a></li>
           {% endfor %}
