--- a/pelican/delphic/templates/base.html
+++ b/pelican/delphic/templates/base.html
@@ -47,11 +47,13 @@
       <div class="col-md-10">
         {% block content %}
         {% endblock %}
+        <hr>
   </div>
 </div>
 <div class="row">
-  <div class="col-sm-12">
-    <hr>
+  <div class="col-sm-2"> </div>
+  <div class="col-sm-10">
+    <img class="avatar" src="/images/jorge.jpg" alt="Jorge Garcia">
     <ul class="social text-center">
       {% for name, link in SITES %}
       <li><a class="sc-{{ name }}" href="{{ link }}" target="_blank">{{ name}}</a></li>
