--- a/pelican/delphic/static/css/style.css
+++ b/pelican/delphic/static/css/style.css
@@ -1,6 +1,7 @@
 body {
 	font-family: 'Roboto', sans-serif;
 	color: #7D7D7D;
+	overflow-y:scroll;
 }
 
 .logo {
@@ -233,4 +234,3 @@ p > img {
 	max-width: 350px;
   }
 }
-	
