--- a/pelican/delphic/templates/base.html
+++ b/pelican/delphic/templates/base.html
@@ -34,7 +34,7 @@
       </div>  
       </div>
       </div>
-      <div class="row">
+      <div class="row" id="content">
       <div class="col-md-2">
         <ul class="nav">
         {% if LINKS %}
@@ -47,12 +47,11 @@
       <div class="col-md-10">
         {% block content %}
         {% endblock %}
-        <hr>
-  </div>
+        </div>
 </div>
-<div class="row">
-  <div class="col-sm-2"> </div>
-  <div class="col-sm-10">
+<div class="row" id="footer">
+  <hr>
+  <div class="col-sm-12">
     <img class="avatar" src="/images/jorge.jpg" alt="Jorge Garcia">
     <ul class="social text-center">
       {% for name, link in SITES %}
