updating front page style

--- a/pelican/delphic/templates/base.html
+++ b/pelican/delphic/templates/base.html
@@ -63,7 +63,8 @@
           <li><a class="sc-{{ name }}" href="{{ link }}" target="_blank">{{ name}}</a></li>
           {% endfor %}
         </ul>
-        <p class="intro-description">{{ AUTHOR_INTRO }}</p><p class="sig">CC BY 2018-{{CURRENTYEAR}} {{ SITENAME }}</p>
+        <p class="intro-description">{{ AUTHOR_INTRO }}</p>
+        <p class="sig">CC BY 2018-{{CURRENTYEAR}} {{ SITENAME }}</p>
         
         <hr>
   </div>
