--- a/pelican/delphic/templates/index.html
+++ b/pelican/delphic/templates/index.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-<p>
+
+<p>    
 <b>
+
 Jorge Garcia, Instructional Technologist & Tinkerer from Chicago
 </b>
 <br><br>
@@ -15,5 +17,8 @@ Previously, I worked extensively with the Chicago Public Library in mutiple role
 Before the Library, I lead an Intro to Web Design workshop at Discovery Center and freelance designed web content for multiple clients who used the CrystalCommerce platform while I managed a small business selling secondhand-market Magic the Gathering for casual and professional players and hosting competitive events. I've also worked in training roles at MicroCenter and Radioshack before that.
 <br><br>
 To best reach me, shoot me an email at <a href="mailto:jorge@jorgegarcia.io">jorge@jorgegarcia.io</a>.
+<br><br>
+<img src="/images/atcpl.png">
+<img src="/images/atym.jpg">
 </p>
 {% endblock content %}
