--- a/pelican/delphic/templates/index.html
+++ b/pelican/delphic/templates/index.html
@@ -18,7 +18,7 @@ Before the Library, I lead an Intro to Web Design workshop at Discovery Center a
 <br><br>
 To best reach me, shoot me an email at <a href="mailto:jorge@jorgegarcia.io">jorge@jorgegarcia.io</a>.
 <br><br>
-<img src="/images/atcpl.png">
+<img src="/images/atcpl.jpg">
 <img src="/images/atym.jpg">
 </p>
 {% endblock content %}
