added blog heading

--- a/pelican/delphic/templates/category.html
+++ b/pelican/delphic/templates/category.html
@@ -13,8 +13,7 @@
 {% endblock content_title %}
 
 {% block content %}
-
-<br>
+<h1>{{ category }}</h1>
 
 <section id="listing">
   {% for article in articles_page.object_list %}
