covid times image

--- a/pelican/delphic/templates/index.html
+++ b/pelican/delphic/templates/index.html
@@ -8,7 +8,10 @@
 Jorge Garcia, Instructional Technologist & Tinkerer from Chicago
 </b>
 <br><br>
-{{ AUTHOR_INTRO }}</p>
+{{ AUTHOR_INTRO }}
+<br>
+<img src="/images/cloudfightduringcovidtimes.jpg">
+</p>
 <p>
 Most of my efforts today are centered around <a href="https://makersinchicago.org">Makers in Chicago</a>, a tool for directing curious individuals interested in the maker culture around the Chicagoland area. Through this, I am always looking for ways to connect individuals, new and veteraned, connect across Chicago's information silos. I also am available for contract IT services.
 <br><br>
